<resources>
    <string name="app_name">知天天气</string>
    <string name="speaker_names">请选择天气预报员</string>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string name="thanks">鸣谢</string>
    <string name="thanks_content">本软件使用了以下开源项目或非开源的第三方SDK，有了他们的无私奉献，
        我们的生活会变得越来越美好，在此对他们的开发者或开发团队表示衷心的感谢！
        其中语音服务由科大讯飞提供，OkHttp、Glide、Butterknife、Logger、友盟统计、SweetAlertDialog、
        高德地图、material-dialogs、circleimageview</string>
    <string name="positive">确定</string>
    <string name="about">知天天气是一款简洁而实用的天气预报app，支持全球5万多城市未来3天的天气预报，
        包括32项预报数据，数据精准，体积小巧，占用内存极低，非常好用。</string>
    <string name="muti_permission_default_style">Mutl Permission(Default Style)</string>
    <string name="muti_permission_blue_style">Mutl Permission(Blue Style)</string>
    <string name="single_permission">Single Permission</string>
    <string name="permission_be_concelled">您取消了授权</string>
    <string name="permission_be_completed">权限全部申请完成completed</string>
    <string name="permission_be_dennied">您拒绝了授权</string>
    <string name="permission_be_granted">您同意了授权</string>
    <string name="permission_cus_item_camera">Camera</string>
    <string name="permission_cus_item_location">Location</string>
    <string name="permission_cus_title">亲爱的用户您好</string>
    <string name="permission_cus_msg">为了给你提供当地的天气服务，\n请授予位置权限！</string>
    <string name="about1">关于</string>
    <string name="app_name_and_version">知天天气 v2.0</string>
    <string name="set_alarm">添加每天定时播报时间</string>
    <string name="city_favorite">城市收藏</string>
    <string name="click_to_relocation">点击重新定位</string>
    <string name="city_search">城市搜索</string>
    <string name="input_city">请输入国内外城市名称</string>
    <string name="search">搜索</string>
    <string name="demo_city">魏县</string>
    <string name="voice_search">语音搜索城市天气，解放你双手</string>
    <string name="set">设置</string>
    <string name="auto_update">自动更新</string>
    <string name="auto_update_closed">自动更新关闭</string>
    <string name="auto_update_open">自动更新打开</string>
    <string name="auto_location">自动定位</string>
    <string name="auto_location_closed">自动定位关闭</string>
    <string name="auto_location_open">自动定位打开</string>
    <string name="auto_cast">自动播报</string>
    <string name="auto_cast_closed">自动播报关闭</string>
    <string name="auto_cast_open">自动播报打开</string>
    <string name="timing_cast">定时播报</string>
    <string name="choose_forecaster">选择天气预报员</string>
    <string name="def_forecaster">小燕</string>
    <string name="check_update">检测新版本</string>
    <string name="version_name">v2.0</string>
    <string name="express_gratitude">鸣谢</string>
    <string name="welcome">欢迎使用知天天气</string>
    <string name="version_show">版本:2.0</string>
    <string name="air_quality">空气质量</string>
    <string name="air_quality_index">空气质量指数</string>
    <string name="good">良</string>
    <string name="aqi">AQI指数</string>
    <string name="co">CO指数</string>
    <string name="no2">NO2指数</string>
    <string name="o3">O3指数</string>
    <string name="so2">SO2指数</string>
    <string name="pm10">PM10指数</string>
    <string name="pm2_5">PM2.5指数</string>
    <string name="update_at">更新于</string>
    <string name="inland_city">国内城市</string>
    <string name="weather">天气</string>
    <string name="temp">气温</string>
    <string name="wind_direction">风向角</string>
    <string name="wind_degree">风向</string>
    <string name="wind_power">风力</string>
    <string name="wind_speed">风速</string>
    <string name="humidity">相对湿度</string>
    <string name="probability">降水概率</string>
    <string name="precipitation">降水量</string>
    <string name="atmosphere">气压</string>
    <string name="ultraviolet">紫外线</string>
    <string name="visibility">能见度</string>
    <string name="sunrise">日出</string>
    <string name="sunset">日落</string>
    <string name="moonrise">月出</string>
    <string name="moonset">月落</string>
    <string name="tip">--上滑查看更多--</string>
    <string name="livelihood">生活建议</string>
    <string name="air_dirty_index">空气污染指数</string>
    <string name="comfort_index">舒适度指数</string>
    <string name="car_warsh_index">洗车指数</string>
    <string name="dress_index">穿衣指数</string>
    <string name="influenza">感冒指数</string>
    <string name="sport_index">运动指数</string>
    <string name="travel_index">旅行指数</string>
    <string name="ultraviolet_index">紫外线指数</string>
</resources>
