<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/aqi_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="15dp"
              android:background="@color/forecast"
              android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_quality"
            android:textColor="@color/basic"
            android:textSize="24sp"
            />

    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--空气质量指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/air"
                style="@style/ForecastStyle"
                android:text="@string/air_quality_index"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/air_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/air"
                android:text="@string/good"
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
        <!--AQI指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/aqi"
                style="@style/ForecastStyle"
                android:text="@string/aqi"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/aqi_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/aqi"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--CO指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/co"
                style="@style/ForecastStyle"
                android:text="@string/co"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/co_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/co"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
        <!--NO2指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/no2"
                style="@style/ForecastStyle"
                android:text="@string/no2"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/no2_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/no2"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--O3指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/o3"
                style="@style/ForecastStyle"
                android:text="@string/o3"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/o3_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/o3"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
        <!--SO2指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/so2"
                style="@style/ForecastStyle"
                android:text="@string/so2"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/so2_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/so2"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--PM10指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/pm10"
                style="@style/ForecastStyle"
                android:text="@string/pm10"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/pm10_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/pm10"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
        <!--PM2.5指数-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/pm25"
                style="@style/ForecastStyle"
                android:text="@string/pm2_5"
                android:textColor="@color/basic"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/pm25_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/pm25"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
