<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/forecast"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        >

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/basic"
            android:textSize="24sp"
            />
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--天气-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sky"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/weather"/>

            <TextView
                android:id="@+id/sky_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/sky"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--气温-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/temp"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/temp"/>

            <TextView
                android:id="@+id/temp_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/temp"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--风向角-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/winddeg"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/wind_direction"/>

            <TextView
                android:id="@+id/winddeg_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/winddeg"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--风向-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/winddir"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/wind_degree"/>

            <TextView
                android:id="@+id/winddir_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/winddir"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--风力-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/windpower"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/wind_power"/>

            <TextView
                android:id="@+id/windpower_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/windpower"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--风速-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/windspeed"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/wind_speed"/>

            <TextView
                android:id="@+id/windspeed_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/windspeed"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--相对湿度-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/humidity"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/humidity"/>

            <TextView
                android:id="@+id/humidity_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/humidity"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--降水概率-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/rainProbability"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/probability"/>

            <TextView
                android:id="@+id/rainProbability_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/rainProbability"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--降水量-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/rainAmout"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/precipitation"/>

            <TextView
                android:id="@+id/rainAmout_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/rainAmout"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--气压-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/atmospheric"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/atmosphere"/>

            <TextView
                android:id="@+id/atmospheric_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/atmospheric"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--紫外线-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/ultravioletRay"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/ultraviolet"/>

            <TextView
                android:id="@+id/ultraviolet_Ray_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/ultravioletRay"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--能见度-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/visibility"
                style="@style/ForecastStyle"
                android:text="@string/visibility"
                android:textColor="@color/basic"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/visibility_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/visibility"
                android:text=""
                android:textColor="@color/basic"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--日出-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sunrise"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/sunrise"/>

            <TextView
                android:id="@+id/sunrise_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/sunrise"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--日落-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/sunset"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/sunset"/>

            <TextView
                android:id="@+id/sunset_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/sunset"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/LineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <!--月出-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/moonrise"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/moonrise"/>

            <TextView
                android:id="@+id/moonrise_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/moonrise"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
        <!--月落-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/moonset"
                style="@style/ForecastStyle"
                android:textSize="18sp"
                android:textColor="@color/basic"
                android:text="@string/moonset"/>

            <TextView
                android:id="@+id/moonset_text"
                style="@style/ForecastStyle"
                android:layout_below="@id/moonset"
                android:textSize="14sp"
                android:textColor="@color/basic"
                android:text=""/>
        </RelativeLayout>
    </LinearLayout>
    <View style="@style/LineStyle"/>
</LinearLayout>